--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://img.icons8.com/?size=100&id=w0JUG294E8rU&format=png&color=000000" />
+    <link
+      rel="icon"
+      href="https://img.icons8.com/?size=100&id=w0JUG294E8rU&format=png&color=000000"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
